--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
     --font-color: #222222;
     --bg-color: #ba7225;
 	--bg-image: url(../img/);
-	--nav-bg-image: url(../img/navbar-background-quartz.png);
+	--nav-bg-image: url(../img/);
 	--logo-image: url(../img/logo-black.svg);
 	--page-bg-color: #d4c9be;
   }
